// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a div 1`] = `
<div
  className="Alert-vc760a-0 bgOmeP"
>
  Hello
</div>
`;

exports[`Alert should render with ui: success 1`] = `
<div
  className="Alert-vc760a-0 hDyBgs"
>
  Hello
</div>
`;
